@@ -20,6 +20,9 @@ apt (0.9.6.1) UNRELEASED; urgency=low
   * buildlib/configure.mak:
     - print a message detailing how to get config.guess and config.sub
       in case they are not in /usr/share/misc (Closes: #677312)
+  * cmdline/apt-get.cc:
+    - print a friendly message in 'download' if a package can't be
+      downloaded (Closes: #677887)
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 14 Jun 2012 15:45:13 +0200
 
